--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-kaspersky-password-manager",
+  "name": "node-kasperskypasswordmanager-into-csv",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT"
 }
